--- a/validocu/src/index.css
+++ b/validocu/src/index.css
@@ -3,9 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,12 +19,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, #root {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden; /* <- importantísimo */
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
