pdf reader implementado, v1

--- a/validocu/src/pages/doc_rev/Grupo.css
+++ b/validocu/src/pages/doc_rev/Grupo.css
@@ -54,11 +54,13 @@
   text-align: left;
   cursor: pointer;
   border-radius: 4px;
+  color: black;
 }
 
 .grupo-sidebar button.active {
   background-color: #d6d6ff;
   font-weight: bold;
+  color: black;
 }
 
 .grupo-content {
