--- a/validocu/src/pages/doc_rev/Grupo.css
+++ b/validocu/src/pages/doc_rev/Grupo.css
@@ -48,6 +48,7 @@
   display: block;
   width: 100%;
   background: white;
+  color: black;
   border: 1px solid #ccc;
   padding: 8px;
   margin-bottom: 8px;
