--- a/validocu/src/layouts/MainLayout.css
+++ b/validocu/src/layouts/MainLayout.css
@@ -42,3 +42,8 @@
   overflow-x: hidden; /* <- previene scroll lateral */
   background-color: #f5f5f5;
 }
+.logo {
+  width: 130px;
+  height: 50px;
+  margin-right: 10px;
+}
