--- a/validocu/src/pages/doc_rev/Grupo.css
+++ b/validocu/src/pages/doc_rev/Grupo.css
@@ -84,7 +84,7 @@
 .doc-info {
   flex: 1;
   background: #fafafa;
-  padding: 16px;
+  padding: 5px;
   border: 1px solid #ddd;
   border-radius: 8px;
   height: fit-content;
@@ -161,4 +161,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 350px;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.modal-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
 }
