Deshabilitar botones de modal mientras se hace una acción

--- a/validocu/src/pages/main/Home.css
+++ b/validocu/src/pages/main/Home.css
@@ -105,3 +105,9 @@
   color: black;
   font-size: 14px;
 }
+
+.modal-buttons {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
