--- a/validocu/src/index.css
+++ b/validocu/src/index.css
@@ -42,15 +42,14 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #868383;
-  cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+button:enabled {
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: light) {
