--- a/validocu/src/pages/doc_rev/Grupo.css
+++ b/validocu/src/pages/doc_rev/Grupo.css
@@ -163,3 +163,20 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.text-info-block {
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.color-box {
+  width: 18px;
+  height: 18px;
+  border-radius: 4px;
+  display: inline-block;
+  margin-right: 8px;
+}
